Fix z-index on strategy window resizer.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@8528 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/Strategy.css
+++ b/View/webapp/wdk/css/Strategy.css
@@ -17,6 +17,7 @@
 	padding-bottom: 10px;
 	border: 1px solid #000;
 	width: 100%;
+	z-index: 10;
 }
 
 #strategy_results .scrollable-wrapper {
